- `container scan` now honors adapter maintenance policy (`WEFTEND_ADAPTER_DISABLE` / `WEFTEND_ADAPTER_DISABLE_FILE`) for `container` lane control.
- Additive receipt/summary surface:
- `safe_run_receipt.json` optional `adapter` metadata block
- `contentSummary.adapterSignals` optional deterministic adapter signal block
- Optional adapter artifacts in run output:
- `analysis/adapter_summary_v0.json`
- `analysis/adapter_findings_v0.json`
- Package/extension ZIP metadata extraction deepened for deterministic manifest signals:
- `.msix/.nupkg/.whl/.jar` manifest text hints are now extracted from ZIP entries (bounded, analysis-only).
- `.crx/.vsix` now parse `manifest.json` when present in ZIP payloads (permissions/content scripts/update URL domain hints).
- `.xpi` extension bundles are now supported through the same deterministic ZIP-manifest path.
- `.crx` strict route now validates CRX wrapper header and embedded ZIP payload before manifest analysis, failing closed on malformed CRX payloads.
- Extension strict route now fails closed on partial ZIP metadata even when `manifest.json` is present, preventing mixed valid/corrupt extension package acceptance.
- Extension strict route now requires baseline manifest core fields (`manifest_version`, `name`, `version`) for explicit extension analysis, preventing empty/placeholder manifests from passing.
- Extension strict route now requires canonical root-path `manifest.json` presence and fails closed on nested-only manifest paths or duplicate root `manifest.json` entries.
- Extension strict route now requires non-ambiguous extension package entry-path sets, preventing duplicate or case-colliding package paths from passing explicit extension analysis.
- Extension strict route now enforces the same non-ambiguous entry-path set rule for unpacked extension inputs, preventing duplicate or case-colliding directory paths from passing explicit extension analysis.
- Linux package coverage added to package adapter: