@@ -45,6 +45,7 @@ See docs/WHAT_IS_WEFTEND.md and docs/WHY_RECEIPTS.md for details.
 - Enable optional local plugin explicitly when needed:
   npm run weftend -- safe-run <input> --out <dir> --adapter archive --enable-plugin tar
 - Adapter artifacts (when adapter is applied):
+  analysis/capability_ledger_v0.json
   analysis/adapter_summary_v0.json
   analysis/adapter_findings_v0.json
 - Optional maintenance gate:
@@ -68,6 +69,7 @@ See docs/WHAT_IS_WEFTEND.md and docs/WHY_RECEIPTS.md for details.
   - Honors adapter maintenance policy (`WEFTEND_ADAPTER_DISABLE` / `WEFTEND_ADAPTER_DISABLE_FILE`) for `container`.
 - Fail-closed precondition outcomes still write deterministic receipts (`safe_run_receipt.json`, `operator_receipt.json`).
 - Output includes deterministic adapter artifacts:
+  analysis/capability_ledger_v0.json
   analysis/adapter_summary_v0.json
   analysis/adapter_findings_v0.json
 - Receipts include bounded counts/flags only (no timestamps or raw env values).
